Anpassen der Doku an das Projekt MetaModel.
git-svn-id: file:///home/nik/repositories/svn/master@126 cf7a9c80-4257-4e8c-b9e2-f0888625b119

--- a/public/doku/metaModel/trunk/content/pages/Titelseite.tex
+++ b/public/doku/metaModel/trunk/content/pages/Titelseite.tex
@@ -1,33 +1,32 @@
-\title{Inter Pedes Virginem Gaudium Est Iuvenum - Geschichte, Legenden, Wahrheiten}
-\author{Tricia Marie McMillian}
-
 \begin{center}
 
+~\vfill
+
 \titlepageBox{
-	\imgUnlabeled[width=\relWidth{0.75}]{Logo_ivv_FHDW.png}
+	\imgUnlabeled[width=\relWidth{0.35}]{Logo_FHDW.png}
 }
 
 \titlepageBoxHeadline{Fachhochschule für die Wirtschaft Hannover}{-- FHDW --}
 
-\titlepageBox{\textbf{Bachelor-Thesis}}
-
-\titlepageBoxHeadline{Thema:}{%
-	\textbf{Inter Pedes Virginem Gaudium Est Iuvenum\\%
-	- Geschichte, Legenden, Wahrheiten -}%
-}
-
-\titlepageBoxHeadline{Prüfer:}{%
-	Prof. Dr. Zaphod Beeblebrox\\%
-	Prof. Dr. Arthur Dent%
-}
+\titlepageBoxHeadline{Dokumentation des Projekts}{\textbf{MetaModel}}
 
 \titlepageBoxHeadline{Verfasser:}{
-	Tricia Marie McMillian\\
-	Douglas-Adams-Weg 42\\
-	31337 Fenchurch
+	Alexander Bellhäuser --
+	Björn Bodensieck\\
+	Malte Kastner --
+	Thimo Koenig\\
+	Stefan Pietsch --
+	Stefanie Rademacker\\
+	Marius Tempelmeier --
+	Niklas Walter\\
+	Christin Weckbrod --
+	Patrick Wolf
 }
 
-\titlepageBoxHeadline{6. Praxisquartal}{Studiengang Wirtschaftsinformatik}
+\titlepageBoxHeadline{1. Theoriequartal}{%
+	Studiengang Master of Science (M.Sc.)\\%
+	Business Process Engineering%
+}
 
 \titlepageBoxHeadline{Eingereicht am:}{\submissionDate}
 
