--- a/public/doku/metaModel/trunk/content/sections/Einleitung.tex
+++ b/public/doku/metaModel/trunk/content/sections/Einleitung.tex
@@ -1,4 +1,4 @@
-\section{Gaudium Est}
+\section{Einleitung}
 
 Das hier ist ein Blindtext zum Testen von Textausgaben. Wer diesen Text liest, ist selbst Schuld. Wo
 kommt eigentlich der Zeilenumbruch? Zicke zacke Hühnerkacke.
@@ -18,7 +18,7 @@ Weiteres siehe \refSec{Ukp} ne?!
 
 Genau sehen wir das in \refImg[Abb.~]{KundeDerIvv} auf \refPageImg{KundeDerIvv}.
 
-\img[width=\relWidth{0.75}]{Logo_ivv_FHDW.png}{Dies ist die Bildunterschrift.}{KundeDerIvv}
+\img[width=\relWidth{0.4}]{Logo_FHDW.png}{Dies ist die Bildunterschrift.}{KundeDerIvv}
 
 Wir arbeiten alle gern mit der \acs{EDV} oder nicht? Doch \acl{EDV} ist toll, weil \ac{EDV} toll
 ist. \ac{EDV} Dies das bla. \acf{EDV}. Man kann das auch oder? Für Lars gibts jetzt Glossareinträge:
