Vorlage vorangetrieben. - Unnötige Seiten entfernt (Ehrenwörtlicher Sperrvermerk) - Gliederung erstellt - Design verbessert dank Kunst-LKler - Literatur hinzugefügt
git-svn-id: file:///home/nik/repositories/svn/master@234 cf7a9c80-4257-4e8c-b9e2-f0888625b119

--- a/public/doku/metaModel/trunk/content/Content.tex
+++ b/public/doku/metaModel/trunk/content/Content.tex
@@ -6,11 +6,6 @@
 \thispagestyle{empty} % Kopf- und Fußzeile ausblenden
 \include{\content/pages/Titelseite} % Inhalt einbinden
 
-% Sperrvermerk
-\newpage
-\setPageTitle{Sperrvermerk} % Seitentitel ändern, da diese Section ausgeblendet ist
-\include{\content/pages/Sperrvermerk} % Inhalt einbinden
-
 % Abstract
 \newpage
 \setPageTitle{Abstract} % Seitentitel ändern, da diese Section ausgeblendet ist
@@ -29,6 +24,15 @@
 
 % Kapitel
 \include{\content/sections/Einleitung} % Inhalt einbinden
+
+% Kapitel
+\include{\content/sections/Grundlagen} % Inhalt einbinden
+
+% Kapitel
+\include{\content/sections/Metamodell} % Inhalt einbinden
+
+% Kapitel
+\include{\content/sections/Fazit} % Inhalt einbinden
 
 % Abbildungsverzeichnis
 \newpage
@@ -53,11 +57,6 @@
 \newpage
 \setPageTitle{Quellenverzeichnis} % Seitentitel ändern, da diese Section ausgeblendet ist
 \include{\content/pages/Quellenverzeichnis} % Inhalt einbinden
-
-% Ehrenwörtliche Erklärung
-\newpage
-\setPageTitle{Ehrenwörtliche Erklärung} % Seitentitel ändern, da diese Section ausgeblendet ist
-\include{\content/pages/Ehrenwoertliche_Erklaerung} % Inhalt einbinden
 
 % Beginn des Anhangs
 \newpage
