--- a/public/doku/metaModel/trunk/content/lib/Literatur.bib
+++ b/public/doku/metaModel/trunk/content/lib/Literatur.bib
@@ -1,11 +1,13 @@
 @comment{Siehe http://en.wikibooks.org/wiki/LaTeX/Bibliography_Management#Standard_templates}
 
-@book{melzer2010service,
-  title={{Service-orientierte Architekturen mit Web Services: Konzepte-Standards-Praxis}},
-  author={Melzer, I.},
-  isbn={3827425492},
-  year={2010},
-  publisher={Springer}
+@book{fowler1997analysis,
+  title={Analysis Patterns: Reusable Object Models},
+  author={Fowler, M.},
+  isbn={9780201895421},
+  lccn={96042988},
+  series={Addison-Wesley Series in Object-Oriented Software Engineering},
+  year={1997},
+  publisher={Addison Wesley}
 }
 
 @book{gamma1995design,
@@ -14,12 +16,4 @@
   volume={206},
   year={1995},
   publisher={Addison-wesley Reading, MA}
-}
-
-@book{adams2001per,
-  title={{Per Anhalter durch die Galaxis}},
-  author={Adams, D. and Schwarz, B.},
-  isbn={3453146972},
-  year={2001},
-  publisher={Heyne}
 }
