--- a/public/doku/metaModel/trunk/content/pages/Titelseite.tex
+++ b/public/doku/metaModel/trunk/content/pages/Titelseite.tex
@@ -11,15 +11,15 @@
 \titlepageBoxHeadline{Dokumentation des Projekts}{\textbf{MetaModel}}
 
 \titlepageBoxHeadline{Verfasser:}{
-	Alexander Bellhäuser --
-	Björn Bodensieck\\
-	Malte Kastner --
-	Thimo Koenig\\
-	Stefan Pietsch --
-	Stefanie Rademacker\\
-	Marius Tempelmeier --
-	Niklas Walter\\
-	Christin Weckbrod --
+	Alexander Bellhäuser,
+	Björn Bodensieck,\\
+	Malte Kastner,
+	Thimo Koenig,\\
+	Stefan Pietsch,
+	Stefanie Rademacker,\\
+	Marius Tempelmeier,
+	Niklas Walter,\\
+	Christin Weckbrod,
 	Patrick Wolf
 }
 
