--- a/public/doku/metaModel/trunk/content/sections/Einleitung.tex
+++ b/public/doku/metaModel/trunk/content/sections/Einleitung.tex
@@ -1,37 +1,27 @@
 \section{Einleitung}
 
-Das hier ist ein Blindtext zum Testen von Textausgaben. Wer diesen Text liest, ist selbst Schuld. Wo
-kommt eigentlich der Zeilenumbruch? Zicke zacke Hühnerkacke.
 
-\subsection{Unterkapitel}
+\subsection{Das Team / das Projekt / die Motivation}
 
-Ein Mensch, der sagen wir als \emph{Christ}, streng gegen Mord und Totschlag ist, hält einen Krieg,
-wenn überhaupt, nur gegen Heiden für erlaubt. Ein anderer Mensch, ein frommer Heide, tut keinem Menschen
-was zu leide. Nur gegenüber Christenhunden, wär jedes Mitleid falsch empfunden. Der ewige Kriege
-blutiger Spur, kommt nur von diesem kleinen \qq{nur}. \refLibInternet[S.~95~ff.]{test95undso}
+\TODO[Kurze Beschreibung des Teams und der Aufgabenstellung]
 
-Weiteres siehe \refSec{Ukp} ne?!
+\TODO[Erklärung: Fachbegriffe ausschließlich in englischer Bezeichnung aus dem Fowler]
 
-\subsubsection{Unterunterkapitel}\lblSec{Ukp}
+\subsection{Aufbau der Arbeit}
 
-\TODO[Ein dickes Todo]
+\TODO[Struktur der Arbeit beschreiben (roter Faden)]
 
-Genau sehen wir das in \refImg[Abb.~]{KundeDerIvv} auf \refPageImg{KundeDerIvv}.
 
-\img[width=\relWidth{0.4}]{Logo_FHDW.png}{Dies ist die Bildunterschrift.}{KundeDerIvv}
+ 
 
-Wir arbeiten alle gern mit der \acs{EDV} oder nicht? Doch \acl{EDV} ist toll, weil \ac{EDV} toll
-ist. \ac{EDV} Dies das bla. \acf{EDV}. Man kann das auch oder? Für Lars gibts jetzt Glossareinträge:
-Und zwar mag Lars die \glp{Xena} oder etwa nicht?
-
-\tbl{Anwendungsfälle}{anwendungsfaelle}{|l||p{\relWidth{0.50}}|}{
-	\thl{Name}					&	\thl{<Hier könnte Ihr Text stehen>}	\tr
-	Auslöser					&	<Hier könnte Ihr Text stehen>	\tr
-	Beteiligte Akteure			&	<Hier könnte Ihr Text stehen>	\tr
-	Vorbedingungen				&	\blindtext						\tr
-	Eingehende Informationen	&	<Hier könnte Ihr Text stehen>	\tr
-	Ergebnis					&	<Hier könnte Ihr Text stehen>	\tr
-	Nachbedingungen				&	<Hier könnte Ihr Text stehen>	\tr
-	Ablaufbeschreibung			&	<Hier könnte Ihr Text stehen>	\tr
-	Ausnahmesituation			&	<Hier könnte Ihr Text stehen>	\tr
-}{\defaultTblBg}
+% \tbl{Anwendungsfälle}{anwendungsfaelle}{|l||p{\relWidth{0.50}}|}{
+% 	\thl{Name}					&	\thl{<Hier könnte Ihr Text stehen>}	\tr
+% 	Auslöser					&	<Hier könnte Ihr Text stehen>	\tr
+% 	Beteiligte Akteure			&	<Hier könnte Ihr Text stehen>	\tr
+% 	Vorbedingungen				&	\blindtext						\tr
+% 	Eingehende Informationen	&	<Hier könnte Ihr Text stehen>	\tr
+% 	Ergebnis					&	<Hier könnte Ihr Text stehen>	\tr
+% 	Nachbedingungen				&	<Hier könnte Ihr Text stehen>	\tr
+% 	Ablaufbeschreibung			&	<Hier könnte Ihr Text stehen>	\tr
+% 	Ausnahmesituation			&	<Hier könnte Ihr Text stehen>	\tr
+% }{\defaultTblBg}
