--- a/public/doku/metaModel/trunk/content/sections/Metamodell_Measurement.tex
+++ b/public/doku/metaModel/trunk/content/sections/Metamodell_Measurement.tex
@@ -1,3 +1,13 @@
 \subsection{Measurement}
 
+Hier beschreiben\ldots
+
+\subsubsection{Attribute und Assoziationen}
+Hier Fliesstext mit Aufzaehlung der Parameter sovie JavaDoc
+
+\subsubsection{Operationen}
+
+\subsubsubsection{Derived, Get und DependentItems}
+Hier Fliesstext mit Aufzaehlung der Parameter sovie JavaDoc
+
 \blindtext
