--- a/public/doku/metaModel/trunk/content/sections/Metamodell_Operation.tex
+++ b/public/doku/metaModel/trunk/content/sections/Metamodell_Operation.tex
@@ -1,19 +1,47 @@
 \subsection{Operations und Associations}
 
+\subsubsection{Operationen}
+
+Die Klasse Operation repräsentiert die Abbildung von Operationen in dem erarbeiteten Modell.
+Wie in dem Modell aus Abbildung XXX ersichtlich, hat die Oberklasse (AbstractOperation) zwei direkte Assoziationen zu Type. 
+Im Kontext von Operationenen ist die Quelle (source) der Typ, welcher die Operation enthält. 
+Das Ziel (target) einer Operation entspricht dem Rückgabetypen.
+Neben Quell und Zieltypen enthält eine Operation eine Menge von Formalparametern welche 
+wiederum über die Klasse Type typisiert sind.
+
+Die Klasse Operation enthält nur genau zwei Operation.
+Die Operation \textbf{isStatic()} gibt genau dann true zurück, wenn der Quelltyp dieser Operation der leeren Summe entspricht.
+Zusätzlich zu der Bedingung aus isStatic gilt für die zweite Operation \textbf{isConstant()}, dass die Operation keine Parameter enthalten darf. 
+
+\subsubsubsection{OperationManager} \newline
+Der OperatioManager bietet 10 transaktionale Operationen und beinhaltet zur Verwaltung vier Listen wobei zwei davon nur abgeleitete Informationen
+enthalten.
+
+\begin{description}
+\item[Operation** operations] Diese Liste enthält alle Operationen die der Manager verwaltet.
+\item[derived Operation** staticOperations] Diese Liste enthält ausschließlich statische Operationen: $\forall \, o  \in staticOperations : o.isStatic()==true$ 
+\item[derived Operation** constants] Diese Liste enthält ausschließlich Konstanten. Demnach gilt: $\forall \, o  \in constants : o.isConstant()==true$
+\item[FormalParameter** formalParameters] Hier werden alle Formalparameter abgelegt die der Manager verwaltet.
+\end{description}
+
+
+TODO Operationen beschreiben!
+
 \subsubsection{Assoziationen}
 
 Die Klasse Association repräsentiert die Möglichkeit Assoziationen zwischen zwei beliebigen Typen abzubilden.
 Neben dem Quell- und Zieltypen, kann eine Assoziation an beliebig vielen Hierarchien teilnehmen.
-Eine Assoziation entspricht der Interpretation einer Observation, wenn alle Targettypen entweder singleton sind oder abstrakt und als Unterklassen nur singletons enthalten.
+Eine Assoziation entspricht der Interpretation einer Observation, wenn alle Zieltypen entweder singleton sind oder abstrakt und als Unterklassen nur singletons enthalten.
 Wie bei vielen anderen Modellbestandteilen, sind auch die Namen der Assoziation indiziert. Daraus folgt auch, dass es keine gleichnamigen 
 Assoziationen geben darf.
 
-Wie in der Abbildung XXX zu sehen ist, können sowohl Operationen als auch Assoziationen Formalparameter beinhalten. Diese Möglichkeit wird
-dem Anwender über die Oberfläche nicht bereitgestellt. Eine Mögliche zur Interpretation von Formalparametern für Assoziationen sind die n-stelligen Assoziationen
+Wie in der Abbildung XXX zu sehen ist, können sowohl Operationen als auch Assoziationen Formalparameter beinhalten. Die Möglichkeit der Zuweisung von
+Formalparametern an Assoziationen, wird dem Anwender über die Oberfläche nicht bereitgestellt. 
+Eine Mögliche zur Interpretation von Formalparametern für Assoziationen sind die n-stelligen Assoziationen
 welche in der ersten Implementierungsstufe nicht umgesetzt wurden.
 
 \subsubsubsection{AssociationManager} \newline
-Der AssoziationManager bietet fünf transaktionale Operationen an und beinhaltet zwei Listen, welche er verwaltet.
+Der AssoziationManager bietet sechs transaktionale Operationen an und beinhaltet zwei Listen, welche er verwaltet.
 Die eine Liste beinhaltet alle erstellten Assoziationen und die andere alle Hierarchien. Diese beiden Listen werden dem Anwender an der 
 Oberfläche präsentiert und dienen der Verwaltung der darin enthaltenen Objekte.
 
@@ -23,8 +51,9 @@ Im Folgenden werden die Operationen des Managers kurz beschrieben, wobei sowohl 
 \item[createAssociation] Bei Aufruf dieser Operation müssen \textbf{Quell- und Zieltyp} sowie der \textbf{Name} der zu erstellenden Assoziation 
 angegeben werden.
 Sollte der Name schon von einer anderen Assoziation verwendet werden, wirft die Operation eine \emph{DoubleDefinitionException} und die Assoziation wird nicht
-erstellt.
-Wenn der Name noch nicht von einer anderen Assoziation belegt ist, wird die Assoziation erstellt und zur Liste der bekannten Assoziationen hingefügt. 
+erstellt. Ein weiterer Grund für das nicht Erstellen einer Assoziation ist, wenn Quell- oder Zieltyp der leeren Summe entsprechen. In einem solchen Fall
+wird eine \emph{ConsistencyException} erstellt.
+Wenn keine der genannten Exceptions aufgetreten ist, wird die Assoziation erstellt und zur Liste der bekannten Assoziationen hingefügt. 
 \item[removeAssociation] Diese Operation erwartet beim Aufruf nur die zu entfernende \textbf{Assoziation}. 
 Bei erfolgreicher Durchführung dieser Operation, wird die
 angegebene Assoziation aus dem System entfernt.
@@ -34,16 +63,15 @@ Sollte es ein oder mehrere Exemplare (Links) zu dieser Assoziation geben oder si
 Insbesondere folgende Gründe führen zum Misserfolg:
 \begin{itemize}
 \item Es exisitiert bereits eine Hierarchie mit diesem Namen. Das hat zur Folge, dass eine \emph{DoubleDefinitionException} erzeugt wird.
-\item Durch das zuordnen der Assoziation zu dieser Hierarchie entsteht auf der Exemplarbene ein Zyklus. Das kann genau dann passieren, wenn es vor 
-der Erstellung der Hierarchie schon zyklische Links zu dieser Assoziation gibt. Da diese Links nun über ihre Assoziation in einer Hierarchie sind, sind 
-Zyklen nicht erlaubt und es kommt zu einer \emph{CycleException.} UMSCHREIBEN VERWEIS AUF addAssociation
+\item Es existiert auf der Exemplarebene ein Zyklus. Wie in der Beschreibung zu addAssociation erläutert, ist dieser Umstand ist für Hierarchien untersagt.
+ Es resultiert eine \emph{CycleException.}
 \end{itemize}
 \item[removeHierarchy] Nach erfolgreicher Ausführung dieser Operation, wird die übergebene \textbf{Hierarchie} aus dem System entfernt. 
 Es wird lediglich die Hierarchie entfernt, die beinhaltenden Assoziationen an sich bleiben weiterhin bestehen.
 \item[addAssociation] Diese Operation erwartet zum einen die \textbf{Hierarchie} zu der die Assoziation hinzugefügt werden soll und zum Anderen die \textbf{Assoziation} selbst.
 Wenn es auf der Exemplarbene keine zyklischen Links zu dieser Assoziation gibt, wird die Assoziation der Hierarchie zugeordnet. Sollte es zyklische Links
 zu dieser Assoziation geben oder die Assoziation ist bereits in dieser Hierarchie, werden entsprechende Exceptions (\emph{CycleException,} bzw. \emph{DoubleDefinitionException}) 
-geworfen und die Assoziation wird der Hierarchie nicht zugeordnet. UMSCHREIBEN
+erstellt und die Assoziation wird der Hierarchie nicht zugeordnet. UMSCHREIBEN(wirklich)
 \item[removeAssoFrmHier] Zum Entfernen von Assoziationen aus Hierarchien, ist es notwendig dieser Operation sowohl die \textbf{Hierarchie}, als auch die zu entfernende 
 \textbf{Assoziation} anzugeben. Dabei wird lediglich die Assoziation aus der Hierarchie entfernt, die Assoziation an sich bleibt bestehen. 
 Sofern die angegebene Assoziation an dieser Hierarchie teilnimmt, wird diese Verbindung durch die Ausführung dieser Operation entfernt. 
